Change how dependencies are managed

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ plugins {
 }
 
 apply plugin: "com.github.konifar.gradle.unused-resources-remover"
+apply from: rootProject.file('versions.gradle')
 
 unusedResourcesRemover {
     extraRemovers = [
@@ -41,11 +42,10 @@ android {
 }
 
 dependencies {
-
-    implementation 'androidx.core:core-ktx:1.6.0'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.4.0'
+    implementation deps.core
+    implementation deps.appcompat
+    implementation deps.material
     testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    androidTestImplementation deps.junit
+    androidTestImplementation deps.espresso
 }
